# proyecto-final

./: .gitignore  CMakeLists.txt  README.md  empresa.cpp  empresa.h  equipo_mantenimiento.cpp  equipo_mantenimiento.h  fecha.cpp  fecha.h  main.cpp  maquinaria.cpp  maquinaria.h  operario.cpp  operario.h
